--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CRUD DE CLIENTES</title>
 </head>
 <body>
+    <form>
+        <h1>Cadastro de clientes</h1>
+
+        <label for="nome">Nome Completo:</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
+        <br><br>
+
+        <label for="nome">Data de Nascimento:</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
+        <br><br>
+
+        <label for="nome">CPF:</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
+        <br><br>
+
+        <label for="nome">Endereço:</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
+        <br><br>
+
+        <!-- Campo para o e-mail -->
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+        <br><br>
     
+    </form>
 </body>
 </html>
