--- a/Index.html
+++ b/Index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD DE CLIENTES</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página de Cadastro</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form>
-        <h1>Cadastro de clientes</h1>
-
-        <label for="nome">Nome Completo:</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
-        <br><br>
-
-        <label for="nome">Data de Nascimento:</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
-        <br><br>
-
-        <label for="nome">CPF:</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
-        <br><br>
-
-        <label for="nome">Endereço:</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome: " required>
-        <br><br>
-
-        <!-- Campo para o e-mail -->
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
-        <br><br>
+  <div class="container">
+    <h2>Cadastro</h2>
     
+    <form id="formCadastro">
+      <label>Nome Completo:</label>
+      <input type="text" id="nome" placeholder="Digite seu nome completo" required>
+
+      <label>Data de Nascimento:</label>
+      <input type="date" id="nascimento" required>
+
+      <label>CPF:</label>
+      <input type="text" id="cpf" placeholder="Digite seu CPF" maxlength="11" required>
+
+      <label>Endereço:</label>
+      <input type="text" id="endereco" placeholder="Digite seu endereço" required>
+
+      <label>Idade:</label>
+      <input type="number" id="idade" placeholder="Digite sua idade" required>
+
+      <label>E-mail:</label>
+      <input type="email" id="email" placeholder="Digite seu e-mail" required>
+
+      <label>Senha:</label>
+      <input type="password" id="senha" placeholder="Digite sua senha" required>
+
+      <label>Confirmar Senha:</label>
+      <input type="password" id="confirmarSenha" placeholder="Confirme sua senha" required>
+
+      <button type="submit">Cadastrar</button>
     </form>
+
+    <p id="mensagem"></p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
